--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="65dp" />
 
+    <Button
+
+        android:id="@+id/new_activity_button"
+        android:text="@string/new_activity_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="65dp" />
+
     <TextView
         android:paddingTop="100dp"
         android:id="@+id/result_text_view"
